==> gabonator/LA104/system/apps_experiments/118_basic/source/terminal-basic/HAL_esp32.cpp <==
#include "HAL_esp32.h"
#include <SD.h>
#include "SPIFFS.h"
#define BUZZER_CHANNEL 0

HAL_extmem_file_t
HAL_extmem_openfile(const char fname[13])
{
	size_t i = 0;
	for (; i < HAL_EXTMEM_NUM_FILES; ++i) {
		if (!extmem_files[i])
			break;
	}

	if (i == HAL_EXTMEM_NUM_FILES) {
		Serial.println("ERROR: Maximum opened files reached");
		return 0;
	}

	char fname_[14];
	fname_[0] = '/';
	strncpy(fname_ + 1, fname, 12);
	fname_[13] = '\0';

#if HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SPIFFS

	if (SPIFFS.exists(fname_))
		extmem_files[i] = SPIFFS.open(fname_, "r+");
	else
		extmem_files[i] = SPIFFS.open(fname_, "w");
	if (!extmem_files[i]) {
		Serial.println("ERROR: SPIFFS.open");
		return 0;
	}
#elif HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SD

	extmem_files[i] = SD.open(fname_, "r+");
	if (!extmem_files[i]) {
		extmem_files[i] = SD.open(fname_, "w");
		if (!extmem_files[i]) {
			Serial.println("ERROR: SD.open");
			return 0;
		}
	}
#endif // HAL_ESP32_EXTMEM

	return i + 1;
}

uint16_t
HAL_extmem_getnumfiles()
{
	uint16_t result = 0;
	File d = gfs.open("/");
	if (!d || !d.isDirectory())
		return 0;
#if HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SPIFFS

	d.rewindDirectory();
	File f = d.openNextFile();
	while (f) {
		++result;
		f = d.openNextFile();
	}
#elif HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SD

	while (true) {
		File f = d.openNextFile();
		if (!f)
			break;
		++result;
		f.close();
	}
	d.close();
#endif // HAL_ESP32_EXTMEM

	return result;
}

void
HAL_extmem_getfilename(uint16_t num, char fname[13])
{
	fname[0] = '\0';
	File d = gfs.open("/");
	if (!d || !d.isDirectory())
		return;

#if HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SPIFFS

	d.rewindDirectory();
	File f = d.openNextFile();
	while (f) {
		if (num == 0) {
			strncpy(fname, f.name() + 1, 12);
			break;
		}
		f = d.openNextFile();
		num--;
	}

#elif HAL_ESP32_EXTMEM == HAL_ESP32_EXTEM_SD

	while (true) {
		File f = d.openNextFile();
		if (!f)
			break;
		if (num == 0) {
			strncpy(fname, f.name() + 1, 12);
			f.close();
			break;
		}
		num--;
		f.close();
	}

#endif // HAL_ESP32_EXTMEM
	d.close();
	fname[12] = '\0';
}

void
HAL_buzzer_notone(uint8_t channel)
{
	ledcWrite(BUZZER_CHANNEL, 0);
	ledcDetachPin(channel);
	pinMode(channel, OUTPUT);
	digitalWrite(channel, HIGH);
}
