==> gabonator/LA104/system/apps_experiments/118_basic/source/terminal-basic/HAL_arduino.cpp <==
#include <string.h>
#include "HAL_arduino.h"
#include "Arduino.h"
#include "sd.hpp"
#include "gfxterm.hpp"
#include "vt100.hpp"
#include "Adafruit_ILI9341.h"
#define CURSOR_BLINK_PERIOD 20

HAL_extmem_file_t
HAL_extmem_openfile(const char path[13])
{
	uint8_t i=0;
	for (; i<EXTMEM_NUM_FILES; ++i) {
		if (!files[i]) {
			files[i] = SDCard::SDFS.open(path, SDCard::Mode::CREAT|SDCard::Mode::WRITE|
			    SDCard::Mode::READ);
			if (files[i])
				return i+1;
		}
	}
	return 0;
}

uint16_t
HAL_extmem_getnumfiles()
{
	uint16_t result = 0;
	auto root = getRootDir();
	root.rewindDirectory();
	SDCard::File f;
	while (f=root.openNextFile(SDCard::Mode::READ_ONLY)) {
		++result;
		f.close();
	}
	return result;
}

void
HAL_extmem_getfilename(uint16_t num, char path[13])
{
	auto root = getRootDir();
	root.rewindDirectory();
	SDCard::File f;
	uint16_t n = num;
	while (f=root.openNextFile(SDCard::Mode::READ_ONLY)) {
		if (n-- == 0) {
			strncpy(path, f.name(), 13);
			f.close();
			return;
		}
		f.close();
	}
}

void
HAL_buzzer_notone(uint8_t channel)
{
	noTone(HAL_BUZZER_ARDUINO_PIN);
}
